--- a/paper/submission/memo.bib
+++ b/paper/submission/memo.bib
@@ -1,3 +1,39 @@
+@article{Efron1975,
+  title = {The {{Efficiency}} of {{Logistic Regression Compared}} to {{Normal Discriminant Analysis}}},
+  author = {Efron, Bradley},
+  year = {1975},
+  journal = {Journal of the American Statistical Association},
+  volume = {70},
+  number = {352},
+  eprint = {2285453},
+  eprinttype = {jstor},
+  pages = {892--898},
+  publisher = {{[American Statistical Association, Taylor \& Francis, Ltd.]}},
+  issn = {0162-1459},
+  doi = {10.2307/2285453},
+  urldate = {2023-11-21},
+  abstract = {A random vector x arises from one of two multivariate normal distributions differing in mean but not covariance. A training set x\textsubscript{1}, x\textsubscript{2}, {$\cdots$}, x\textsubscript{n} of previous cases, along with their correct assignments, is known. These can be used to estimate Fisher's discriminant by maximum likelihood and then to assign x on the basis of the estimated discriminant, a method known as the normal discrimination procedure. Logistic regression does the same thing but with the estimation of Fisher's discriminant done conditionally on the observed values of x\textsubscript{1}, x\textsubscript{2}, {$\cdots$}, x\textsubscript{n}. This article computes the asymptotic relative efficiency of the two procedures. Typically, logistic regression is shown to be between one half and two thirds as effective as normal discrimination for statistically interesting values of the parameters.},
+  langid = {english},
+  file = {D:\zotero_system\storage\2C8RJ283\Efron1975_The Efficiency of Logistic Regression Compared to Normal Discriminant Analysis.pdf}
+}
+
+@incollection{KissellPoserina2017,
+  title = {Chapter 4 - {{Advanced Math}} and {{Statistics}}},
+  booktitle = {Optimal {{Sports Math}}, {{Statistics}}, and {{Fantasy}}},
+  author = {Kissell, Robert and Poserina, Jim},
+  editor = {Kissell, Robert and Poserina, Jim},
+  year = {2017},
+  month = jan,
+  pages = {103--135},
+  publisher = {{Academic Press}},
+  doi = {10.1016/B978-0-12-805163-4.00004-9},
+  urldate = {2023-11-21},
+  abstract = {This chapter provides an overview of the use of probability and statistics in sports modeling applications. The chapter includes an overview of the important mathematics required for probability and statistics modeling and a review of essential probability distribution functions required for model construction and parameter estimation. The chapter also includes an introduction to different sampling techniques that can be used to test the accuracy of sports prediction models and to correct for data limitation issues which are often present in sports modeling problems. This is primarily due to limited data observations and/or not having games across all pairs of teams.},
+  isbn = {978-0-12-805163-4},
+  langid = {english},
+  keywords = {chi-square distribution logistic model,cumulative distribution function (CDF),distribution functions,log-normal distribution,neural networks,normal distribution,power function,principal component analysis (PCA),Probability,probability distribution function (PDF),sampling,simulation,statistics}
+}
+
 @article{PetersonEtAl2022,
   title = {Macrointerest},
   author = {Peterson, David A. M. and Miller, Joanne M. and Saunders, Kyle L. and McClurg, Scott D.},
