--- a/paper/submission/memo.qmd
+++ b/paper/submission/memo.qmd
@@ -21,12 +21,14 @@ title:  Macrointerest Across Countries
 subtitle: Memo to Editor and Reviewers
 ---
 
-**Method comparison** We follow R1's suggestion to compare DCPO with other methods, especially, @PetersonEtAl2022's Wcalc in more detail. 
+**Method comparison**. 
+We follow R1's suggestion to compare DCPO with other methods, especially, @PetersonEtAl2022's Wcalc in more detail. 
 In the main text (p. XXXX), we state the rationale to use DCPO over Wcalc in this research and direct readers to a special appendix, Appendix XXX.
 In the new appendix, we discuss the methodological and operational differences between DCPO and Wcalc.
 Furthermore, we compare the outcomes from the two methods and point out the advantage of DCPO on yielding more efficient estimation by incorporating information from other countries and scaling. 
 
-**Scaling**. R1 also suggested us to consider employing the cumulative distribution function (CDF) of the normal distribution, as an alternative to the logistic transformation, for scaling responses on the unit interval within the DCPO framework.
+**Scaling**. 
+R1 also suggested us to consider employing the cumulative distribution function (CDF) of the normal distribution, as an alternative to the logistic transformation, for scaling responses on the unit interval within the DCPO framework.
 We acknowledge and value this suggestion. 
 Both the logistic function and the normal distribution's CDF serve to convert variables into a CDF format. 
 In DCPO, our preference for the logistic function is grounded in its inherent flexibility and enhanced tolerance for deviations from standard assumptions. 
@@ -37,6 +39,10 @@ To address this, we have incorporated a specific annotation (Footnote XXX) in th
 Additionally, the source code for DCPO is comprehensively accessible online, enabling users to modify transformation methods as they see fit. 
 For confidentiality purposes, this detail was omitted in the current draft but will be disclosed subsequent to the research's acceptance for publication.
   
-
+**Uncertainty**. 
+In response to R1's suggestion to provide more details about the uncertainty incorporation, we made a specific discussion in Footnote XXX. 
+We used the "Method of Composition" to account for the uncertainty in the ex post analysis based on the estimated latent variable together with others. 
+This is a method that has been used in a series of latent variable analyses in political science. 
+We listed several other applications and also direct readers to a more detailed technical note of how the method is incorporated in the DCPO framework.
 
 # Reference {-}
